// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountsPicker does the right thing 1`] = `
Array [
  Object {
    "id": 0,
    "label": "0.33",
    "value": "0.33",
  },
  Object {
    "id": 1,
    "label": "0.5",
    "value": "0.5",
  },
  Object {
    "id": 2,
    "label": "0.75",
    "value": "0.75",
  },
  Object {
    "id": 3,
    "label": "1",
    "value": "1",
  },
  Object {
    "id": 4,
    "label": "1.5",
    "value": "1.5",
  },
  Object {
    "id": 5,
    "label": "2",
    "value": "2",
  },
]
`;

exports[`AmountsPicker does the right thing 2`] = `
Array [
  Object {
    "id": 0,
    "label": "0.33",
    "value": "0.33",
  },
  Object {
    "id": 1,
    "label": "0.5",
    "value": "0.5",
  },
  Object {
    "id": 2,
    "label": "0.75",
    "value": "0.75",
  },
  Object {
    "id": 3,
    "label": "1",
    "value": "1",
  },
  Object {
    "id": 4,
    "label": "1.5",
    "value": "1.5",
  },
  Object {
    "id": 5,
    "label": "2",
    "value": "2",
  },
]
`;

exports[`AmountsPicker does the right thing 3`] = `
Array [
  Object {
    "id": 0,
    "label": "1",
    "value": "1",
  },
  Object {
    "id": 1,
    "label": "10",
    "value": "10",
  },
  Object {
    "id": 2,
    "label": "20",
    "value": "20",
  },
  Object {
    "id": 3,
    "label": "50",
    "value": "50",
  },
  Object {
    "id": 4,
    "label": "100",
    "value": "100",
  },
  Object {
    "id": 5,
    "label": "200",
    "value": "200",
  },
  Object {
    "id": 6,
    "label": "250",
    "value": "250",
  },
  Object {
    "id": 7,
    "label": "500",
    "value": "500",
  },
]
`;

exports[`AmountsPicker does the right thing 4`] = `
Array [
  Object {
    "id": 0,
    "label": "1",
    "value": "1",
  },
  Object {
    "id": 1,
    "label": "2",
    "value": "2",
  },
  Object {
    "id": 2,
    "label": "5",
    "value": "5",
  },
  Object {
    "id": 3,
    "label": "10",
    "value": "10",
  },
  Object {
    "id": 4,
    "label": "50",
    "value": "50",
  },
  Object {
    "id": 5,
    "label": "100",
    "value": "100",
  },
  Object {
    "id": 6,
    "label": "200",
    "value": "200",
  },
  Object {
    "id": 7,
    "label": "1000",
    "value": "1000",
  },
]
`;
